@@ -890,8 +890,6 @@ void ASN1_STRING_TABLE_cleanup(void);
 #define ASN1_F_D2I_POLICYINFO				 269
 #define ASN1_F_D2I_POLICYQUALINFO			 270
 #define ASN1_F_D2I_PRIVATEKEY				 155
-#define ASN1_F_D2I_PRIVATEKEY_BIO			 293
-#define ASN1_F_D2I_PRIVATEKEY_FP			 294
 #define ASN1_F_D2I_PUBLICKEY				 156
 #define ASN1_F_D2I_RSAPRIVATEKEY			 157
 #define ASN1_F_D2I_RSAPUBLICKEY				 158
